# intergen

./: .gitignore  README.md  config.example.toml  config.toml  pyproject.toml  requirements.txt
assets/: pure_metal_lattice_constants.csv
src/intergen/: __main__.py  adsorbate.py  config.py  constraints.py  metadata.py  surface.py
tests/: test_adsorbate.py  test_constraints.py  test_main.py  test_metadata.py  test_surface.py
