[tool.uv]
src = "src"

[project]
name = "intergen"
version = "0.1.0"
description = "Flexible interface generator for catalysis, surface science, and materials modeling."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ase>=3.25.0",
    "pydantic>=2.11.4",
    "pymatgen>=2025.5.2",
    "toml>=0.10.2",
]
