[tool.uv]

[tool.uv.sources]
intergen = { workspace = true }

[project]
name = "intergen"
version = "0.1.0"
description = "Flexible interface generator for catalysis, surface science, and materials modeling."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
    "acat>=1.7.1",
    "ase==3.22.1",
    "intergen",
    "numpy==1.25.0",
    "pydantic>=2.11.4",
    "pymatgen>=2025.5.2",
    "tomli>=2.2.1",
]
