[tool.uv]

[tool.uv.sources]
intergen = { workspace = true }

[project]
name = "intergen"
version = "0.1.0"
description = "Flexible interface generator for catalysis, surface science, and materials modeling."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
    "ase>=3.25.0",
    "intergen",
    "numpy>=2.2.6",
    "pydantic>=2.11.4",
    "pymatgen>=2025.5.2",
    "toml>=0.10.2",
]
